--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Play Store</title>
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,800|Roboto:400,700,900,900i&subset=cyrillic" rel="stylesheet">
 </head>
 <body>
   <header class="main-header">
