Исправил ошибки в разметке, добавил вспомогательные классы

--- a/index.html
+++ b/index.html
@@ -9,144 +9,150 @@
 </head>
 <body>
   <header class="main-header">
-    <div class="index-logo"><img src="img/index-logo.png" width="170" height="140" alt="Play Store"></div>
-    <div class="social">
-      <a href="#" class="social-fb"></a>
-      <a href="#" class="social-tw"></a>
-      <a href="#" class="social-youtube"></a>
-      <a href="#" class="social-pint"></a>
-      <a href="#" class="social-inst"></a>
-    </div>
-    <section class="header-greeting">
-      <h2>Playstore привествует вас!</h2>
-      <p>Все, что вам нужно для того, чтобы вообще не&nbsp;выходить из&nbsp;дома есть у&nbsp;нас! Не&nbsp;надо закрывать сайт и&nbsp;идти куда-то еще, лучше открой наш каталог и&nbsp;убедись сам =)</p>
-    </section>
-    <div class="slider">
-      <article class="slider-item">
-        <div class="item-image"><img src="img/ps4-uncharted4-slider.png" width="360" height="248" alt="PS4 Uncharted 4 Edition"></div>
-        <h1>Игровая консоль PlayStation 4&nbsp;Uncharted&nbsp;4 Edition (CUH-1208B)</h1>
-        <p>Купите комплект PS4 &laquo;Uncharted&nbsp;4: Путь вора&raquo; ограниченной серии и&nbsp;получите новейшее приключение Натана Дрейка и&nbsp;яркую серо-голубую систему PS4&nbsp;с 1&nbsp;Тб встроенной памяти. На&nbsp;консоли изображен Натан Дрейк, а&nbsp;беспроводной контроллер DUALSHOCK 4&nbsp;исполнен в&nbsp;той&nbsp;же цветовой гамме.</p>
-        <a href="#" class="btn">Купить</a>
-      </article>
+    <div class="container">
+      <div class="index-logo"><img src="img/index-logo.png" width="170" height="140" alt="Play Store"></div>
+      <div class="social">
+        <a href="#" class="social-fb"></a>
+        <a href="#" class="social-tw"></a>
+        <a href="#" class="social-youtube"></a>
+        <a href="#" class="social-pint"></a>
+        <a href="#" class="social-inst"></a>
+      </div>
+      <section class="header-greeting">
+        <h2>Playstore привествует вас!</h2>
+        <p>Все, что вам нужно для того, чтобы вообще не&nbsp;выходить из&nbsp;дома есть у&nbsp;нас! Не&nbsp;надо закрывать сайт и&nbsp;идти куда-то еще, лучше открой наш каталог и&nbsp;убедись сам =)</p>
+      </section>
+      <div class="slider">
+        <article class="slider-item">
+          <div class="item-image"><img src="img/ps4-uncharted4-slider.png" width="360" height="248" alt="PS4 Uncharted 4 Edition"></div>
+          <h1>Игровая консоль PlayStation 4&nbsp;Uncharted&nbsp;4 Edition (CUH-1208B)</h1>
+          <p>Купите комплект PS4 &laquo;Uncharted&nbsp;4: Путь вора&raquo; ограниченной серии и&nbsp;получите новейшее приключение Натана Дрейка и&nbsp;яркую серо-голубую систему PS4&nbsp;с 1&nbsp;Тб встроенной памяти. На&nbsp;консоли изображен Натан Дрейк, а&nbsp;беспроводной контроллер DUALSHOCK 4&nbsp;исполнен в&nbsp;той&nbsp;же цветовой гамме.</p>
+          <a href="#" class="btn">Купить</a>
+        </article>
+      </div>
     </div>
   </header>
-  <div class="left-col">
-    <nav class="main-menu">
-      <h2>Меню</h2>
-      <ul>
-        <li><a href="#">О нас</a></li>
-        <li><a href="#">Игровые консоли</a></li>
-        <li><a href="#">Игры</a></li>
-        <li><a href="#">Аксессуары</a></li>
-        <li><a href="#">Распродажа</a></li>
-        <li><a href="#">Блог</a></li>
-        <li><a href="#">Контакты</a></li>
-      </ul>
-    </nav>
-    <div class="banner"></div>
+  <div class="container">
+    <div class="left-col">
+      <nav class="main-menu">
+        <h2>Меню</h2>
+        <ul>
+          <li><a href="#">О нас</a></li>
+          <li><a href="#">Игровые консоли</a></li>
+          <li><a href="#">Игры</a></li>
+          <li><a href="#">Аксессуары</a></li>
+          <li><a href="#">Распродажа</a></li>
+          <li><a href="#">Блог</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+      <div class="banner"></div>
+    </div>
+    <main class="right-col">
+      <section class="gallery-1">
+        <h2>Новинки</h2>
+        <article>
+          <a href="#">
+            <img src="img/uncharted4.jpg" width="250" height="235" alt="Uncharted 4: A Thief's End">
+            <h1>Uncharted&nbsp;4: A&nbsp;Thief&rsquo;s End</h1>
+            <span>3 490</span>
+          </a>
+        </article>
+        <article>
+          <a href="#">
+            <img src="img/ps4-uncharted4.jpg" width="250" height="235" alt="PS4 Uncharted 4 Edition">
+            <h1>PS4 Uncharted&nbsp;4 Edition</h1>
+            <span>29 990</span>
+            <span class="line-through">36 990</span>
+          </a>
+        </article>
+        <article>
+          <a href="#">
+            <img src="img/the-witcher3.jpg" width="250" height="235" alt="Ведьмак 3: Дикая охота">
+            <h1>Ведьмак&nbsp;3: Дикая охота</h1>
+            <span>1 990</span>
+          </a>
+        </article>
+      </section>
+      <section class="gallery-2">
+        <h2>Популярное</h2>
+        <article>
+          <a href="#">
+            <img src="img/ps4.jpg" width="250" height="235" alt="Игровая консоль PlayStation 4 500Gb Black (CUH-1108A)">
+            <h1>Игровая консоль PlayStation&nbsp;4 500Gb Black (CUH-1108A)</h1>
+            <span>24 990</span>
+          </a>
+        </article>
+        <article>
+          <a href="#">
+            <img src="img/the-last-of-us-remastered.jpg" width="250" height="235" alt="The Last of Us: Remastered">
+            <h1>The Last of&nbsp;Us: Remastered</h1>
+            <span>1490</span>
+          </a>
+        </article>
+        <article>
+          <a href="#">
+            <img src="img/uncharted-collection.jpg" width="250" height="235" alt="Uncharted: Collection">
+            <h1>Uncharted: Collection</h1>
+            <span>2 990</span>
+          </a>
+        </article>
+      </section>
+      <section class="gallery-3">
+        <h2>Распродажа</h2>
+        <article>
+          <a href="#">
+            <img src="img/beyond-heavy-rain.jpg" width="250" height="235" alt="Коллекция: Heavy Rain, За гранью: Две души">
+            <h1>Коллекция: Heavy Rain, За&nbsp;гранью: Две души</h1>
+            <span>1 990</span>
+            <span class="line-throgh">2 490</span>
+          </a>
+        </article>
+        <article>
+          <a href="#">
+            <img src="img/killzone.jpg" width="250" height="235" alt="Killzone: Shadow Fall">
+            <h1>Killzone: Shadow Fall</h1>
+            <span>1 490</span>
+            <span class="line-through">2 190</span>
+          </a>
+        </article>
+        <article>
+          <a href="#">
+            <img src="img/battlefield4.jpg" width="250" height="235" alt="Battlefield 4. Premium Edition">
+            <h1>Battlefield&nbsp;4. Premium Edition</h1>
+            <span>1 190</span>
+            <span class="line-through">1 790</span>
+          </a>
+        </article>
+      </section>
+    </main>
+    <aside class="brandlist">
+      <img src="img/ubisoft-logo.png" alt="Ubisoft Logo" title="Ubisoft">
+      <img src="img/EA-logo.png" alt="EA Logo" title="EA">
+      <img src="img/nival-logo.png" alt="Nival Logo" title="Nival">
+      <img src="" alt="">
+      <img src="" alt="">
+      <img src="" alt="">
+    </aside>
+    <aside class="feed">
+      <div class="feed-img"><img src="img/photo-1.jpg" alt="PS4 Black" title="PS4 Black"></div>
+      <div class="feed-img"><img src="img/photo-2.jpg" alt="PS4 Camera" title="PS4 Camera"></div>
+      <div class="feed-img"><img src="img/photo-3.jpg" alt="PS4 Full Set" title="PS4 Full Set"></div>
+      <div class="feed-img"><img src="img/photo-4.jpg" alt="PS4 Gamepad Lightning" title="PS4 Gamepad Lightning"></div>
+      <div class="feed-img"><img src="img/photo-5.jpg" alt="PS4 Disks" title="PS4 Disks"></div>
+      <div class="feed-img"><img src="img/photo-6.jpg" alt="PS4 20th Anniversary" title="PS4 20th Anniversary"></div>
+    </aside>
   </div>
-  <main>
-    <section class="gallery-1">
-      <h2>Новинки</h2>
-      <article>
-        <a href="#">
-          <img src="img/uncharted4.jpg" width="250" height="235" alt="Uncharted 4: A Thief's End">
-          <h1>Uncharted&nbsp;4: A&nbsp;Thief&rsquo;s End</h1>
-          <span>3 490</span>
-        </a>
-      </article>
-      <article>
-        <a href="#">
-          <img src="img/ps4-uncharted4.jpg" width="250" height="235" alt="PS4 Uncharted 4 Edition">
-          <h1>PS4 Uncharted&nbsp;4 Edition</h1>
-          <span>29 990</span>
-          <span class="line-through">36 990</span>
-        </a>
-      </article>
-      <article>
-        <a href="#">
-          <img src="img/the-witcher3.jpg" width="250" height="235" alt="Ведьмак 3: Дикая охота">
-          <h1>Ведьмак&nbsp;3: Дикая охота</h1>
-          <span>1 990</span>
-        </a>
-      </article>
-    </section>
-    <section class="gallery-2">
-      <h2>Популярное</h2>
-      <article>
-        <a href="#">
-          <img src="img/ps4.jpg" width="250" height="235" alt="Игровая консоль PlayStation 4 500Gb Black (CUH-1108A)">
-          <h1>Игровая консоль PlayStation&nbsp;4 500Gb Black (CUH-1108A)</h1>
-          <span>24 990</span>
-        </a>
-      </article>
-      <article>
-        <a href="#">
-          <img src="img/the-last-of-us-remastered.jpg" width="250" height="235" alt="The Last of Us: Remastered">
-          <h1>The Last of&nbsp;Us: Remastered</h1>
-          <span>1490</span>
-        </a>
-      </article>
-      <article>
-        <a href="#">
-          <img src="img/uncharted-collection.jpg" width="250" height="235" alt="Uncharted: Collection">
-          <h1>Uncharted: Collection</h1>
-          <span>2 990</span>
-        </a>
-      </article>
-    </section>
-    <section class="gallery-3">
-      <h2>Распродажа</h2>
-      <article>
-        <a href="#">
-          <img src="img/beyond-heavy-rain.jpg" width="250" height="235" alt="Коллекция: Heavy Rain, За гранью: Две души">
-          <h1>Коллекция: Heavy Rain, За&nbsp;гранью: Две души</h1>
-          <span>1 990</span>
-          <span class="line-throgh">2 490</span>
-        </a>
-      </article>
-      <article>
-        <a href="#">
-          <img src="img/killzone.jpg" width="250" height="235" alt="Killzone: Shadow Fall">
-          <h1>Killzone: Shadow Fall</h1>
-          <span>1 490</span>
-          <span class="line-through">2 190</span>
-        </a>
-      </article>
-      <article>
-        <a href="#">
-          <img src="img/battlefield4.jpg" width="250" height="235" alt="Battlefield 4. Premium Edition">
-          <h1>Battlefield&nbsp;4. Premium Edition</h1>
-          <span>1 190</span>
-          <span class="line-through">1 790</span>
-        </a>
-      </article>
-      <aside>
-        <div class="brandlist">
-          <img src="img/ubisoft-logo.png" alt="Ubisoft Logo" title="Ubisoft">
-          <img src="img/EA-logo.png" alt="EA Logo" title="EA">
-          <img src="img/nival-logo.png" alt="Nival Logo" title="Nival">
-          <img src="" alt="">
-          <img src="" alt="">
-          <img src="" alt="">
-        </div>
-        <div class="feed">
-          <div class="feed-img"><img src="img/photo-1.jpg" alt="PS4 Black" title="PS4 Black"></div>
-          <div class="feed-img"><img src="img/photo-2.jpg" alt="PS4 Camera" title="PS4 Camera"></div>
-          <div class="feed-img"><img src="img/photo-3.jpg" alt="PS4 Full Set" title="PS4 Full Set"></div>
-          <div class="feed-img"><img src="img/photo-4.jpg" alt="PS4 Gamepad Lightning" title="PS4 Gamepad Lightning"></div>
-          <div class="feed-img"><img src="img/photo-5.jpg" alt="PS4 Disks" title="PS4 Disks"></div>
-          <div class="feed-img"><img src="img/photo-6.jpg" alt="PS4 20th Anniversary" title="PS4 20th Anniversary"></div>
-        </div>
-      </aside>
-    </section>
-  </main>
   <footer class="main-footer">
     <div class="footer-top">
-      <a href="#" class="big-btn big-btn-fb"></a>
-      <a href="#" class="big-btn big-btn-tw"></a>
-      <a href="#" class="big-btn big-btn-pint"></a>
-      <div class="footer-middle">
+      <div class="container">
+        <a href="#" class="big-btn big-btn-fb"></a>
+        <a href="#" class="big-btn big-btn-tw"></a>
+        <a href="#" class="big-btn big-btn-pint"></a>
+      </div>
+    </div>
+    <div class="footer-middle">
+      <div class="container">
         <section>
           <h2>Category</h2>
           <ul>
@@ -158,59 +164,62 @@
             <li><a href="#">blog</a></li>
             <li><a href="#">contact</a></li>
           </ul>
-        </section>
-        <section>
-          <h2>Our Account</h2>
-          <ul>
-            <li><a href="#">Your Account</a></li>
-            <li><a href="#">Personal information</a></li>
-            <li><a href="#">Addresses</a></li>
-            <li><a href="#">Discount</a></li>
-            <li><a href="#">Orders history</a></li>
-            <li><a href="#">Addresses</a></li>
-            <li><a href="#">Search Terms</a></li>
-          </ul>
-        </section>
-        <section>
-          <h2>Our Support</h2>
-          <ul>
-            <li><a href="#">Site Map</a></li>
-            <li><a href="#">Search Terms</a></li>
-            <li><a href="#">Advanced Search</a></li>
-            <li><a href="#">Mobile</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Mobile</a></li>
-            <li><a href="#">Addresses</a></li>
-          </ul>
-        </section>
-        <section>
-          <h2>Newsletter</h2>
-          <p>Join thousands of&nbsp;other people subscribe to&nbsp;our news</p>
-          <form action="">
-            <input type="email">
-            <button type="submit">Submit</button>
-          </form>
-          <div class="pay-services">
-            <img src="img/aex.jpg" width="36" height="22" alt="aex">
-            <img src="img/mastercard.jpg" width="36" height="22" alt="mastercard">
-            <img src="img/maestro.jpg" width="36" height="22" alt="maestro">
-            <img src="img/paypal.jpg" width="36" height="22" alt="paypal">
-            <img src="img/discover.jpg" width="36" height="22" alt="discover">
-            <img src="img/visa.jpg" width="36" height="22" alt="visa">
-          </div>
-        </section>
-        <section>
-          <h2>About Us</h2>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-          <span>Phone:</span>
-          <span>1-999-342-9876</span>
-          <span>e-mail:</span>
-          <span>info@surfhouse.com</span>
-        </section>
+          </section>
+          <section>
+            <h2>Our Account</h2>
+            <ul>
+              <li><a href="#">Your Account</a></li>
+              <li><a href="#">Personal information</a></li>
+              <li><a href="#">Addresses</a></li>
+              <li><a href="#">Discount</a></li>
+              <li><a href="#">Orders history</a></li>
+              <li><a href="#">Addresses</a></li>
+              <li><a href="#">Search Terms</a></li>
+            </ul>
+          </section>
+          <section>
+            <h2>Our Support</h2>
+            <ul>
+              <li><a href="#">Site Map</a></li>
+              <li><a href="#">Search Terms</a></li>
+              <li><a href="#">Advanced Search</a></li>
+              <li><a href="#">Mobile</a></li>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Mobile</a></li>
+              <li><a href="#">Addresses</a></li>
+            </ul>
+          </section>
+          <section>
+            <h2>Newsletter</h2>
+            <p>Join thousands of&nbsp;other people subscribe to&nbsp;our news</p>
+            <form action="">
+              <input type="email">
+              <button type="submit">Submit</button>
+            </form>
+            <div class="pay-services">
+              <img src="img/aex.jpg" width="36" height="22" alt="aex">
+              <img src="img/mastercard.jpg" width="36" height="22" alt="mastercard">
+              <img src="img/maestro.jpg" width="36" height="22" alt="maestro">
+              <img src="img/paypal.jpg" width="36" height="22" alt="paypal">
+              <img src="img/discover.jpg" width="36" height="22" alt="discover">
+              <img src="img/visa.jpg" width="36" height="22" alt="visa">
+            </div>
+          </section>
+          <section>
+            <h2>About Us</h2>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+            <span>Phone:</span>
+            <span>1-999-342-9876</span>
+            <span>e-mail:</span>
+            <span>info@surfhouse.com</span>
+          </section>
+        </div>
       </div>
       <div class="footer-bottom">
-        <div class="copyright">&copy; 2016 PlayStore. Все права защищены</div>
-        <div class="footer-social"></div>
+        <div class="container">
+          <div class="copyright">&copy; 2016 PlayStore. Все права защищены</div>
+          <div class="footer-social"></div>
+        </div>
       </div>
     </div>
   </footer>
