--- a/index.html
+++ b/index.html
@@ -9,26 +9,34 @@
 </head>
 <body>
   <header class="main-header">
-    <div class="container">
-      <div class="index-logo"><img src="img/index-logo.png" width="170" height="140" alt="Play Store"></div>
-      <div class="social">
-        <a href="#" class="social-fb"></a>
-        <a href="#" class="social-tw"></a>
-        <a href="#" class="social-youtube"></a>
-        <a href="#" class="social-pint"></a>
-        <a href="#" class="social-inst"></a>
+    <div class="container clearfix">
+      <div class="header-row clearfix">
+        <div class="index-logo to-left"><img src="img/index-logo.png" width="170" height="140" alt="Play Store"></div>
+        <div class="header-social to-right">
+          <a href="#" class="social-fb">facebook</a>
+          <a href="#" class="social-tw">twitter</a>
+          <a href="#" class="social-youtube">youtube</a>
+          <a href="#" class="social-pint">pinterest</a>
+          <a href="#" class="social-inst">instagram</a>
+        </div>
       </div>
-      <section class="header-greeting">
-        <h2>Playstore привествует вас!</h2>
-        <p>Все, что вам нужно для того, чтобы вообще не&nbsp;выходить из&nbsp;дома есть у&nbsp;нас! Не&nbsp;надо закрывать сайт и&nbsp;идти куда-то еще, лучше открой наш каталог и&nbsp;убедись сам =)</p>
-      </section>
-      <div class="slider">
-        <article class="slider-item">
-          <div class="item-image"><img src="img/ps4-uncharted4-slider.png" width="360" height="248" alt="PS4 Uncharted 4 Edition"></div>
-          <h1>Игровая консоль PlayStation 4&nbsp;Uncharted&nbsp;4 Edition (CUH-1208B)</h1>
-          <p>Купите комплект PS4 &laquo;Uncharted&nbsp;4: Путь вора&raquo; ограниченной серии и&nbsp;получите новейшее приключение Натана Дрейка и&nbsp;яркую серо-голубую систему PS4&nbsp;с 1&nbsp;Тб встроенной памяти. На&nbsp;консоли изображен Натан Дрейк, а&nbsp;беспроводной контроллер DUALSHOCK 4&nbsp;исполнен в&nbsp;той&nbsp;же цветовой гамме.</p>
-          <a href="#" class="btn">Купить</a>
-        </article>
+      <div class="header-row clearfix">
+        <section class="header-greeting to-left">
+          <h2>Playstore привествует вас!</h2>
+          <p>Все, что вам нужно для того, чтобы вообще не&nbsp;выходить из&nbsp;дома есть у&nbsp;нас! Не&nbsp;надо закрывать сайт и&nbsp;идти куда-то еще, лучше открой наш каталог и&nbsp;убедись сам =)</p>
+        </section>
+        <div class="header-slider to-right">
+          <article class="slider-item">
+            <div class="item-image to-left"><img src="img/ps4-uncharted4-slider.png" width="360" height="248" alt="PS4 Uncharted 4 Edition"></div>
+            <div class="to-right">
+              <section class="item-description">
+                <h1>Игровая консоль PlayStation 4&nbsp;Uncharted&nbsp;4 Edition (CUH-1208B)</h1>
+                <p>Купите комплект PS4 &laquo;Uncharted&nbsp;4: Путь вора&raquo; ограниченной серии и&nbsp;получите новейшее приключение Натана Дрейка и&nbsp;яркую серо-голубую систему PS4&nbsp;с 1&nbsp;Тб встроенной памяти. На&nbsp;консоли изображен Натан Дрейк, а&nbsp;беспроводной контроллер DUALSHOCK 4&nbsp;исполнен в&nbsp;той&nbsp;же цветовой гамме.</p>
+              </section>
+              <a href="#" class="btn">Купить</a>
+            </div>
+          </article>
+        </div>
       </div>
     </div>
   </header>
