--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
           <p>Все, что вам нужно для того, чтобы вообще не&nbsp;выходить из&nbsp;дома есть у&nbsp;нас! Не&nbsp;надо закрывать сайт и&nbsp;идти куда-то еще, лучше открой наш каталог и&nbsp;убедись сам =)</p>
         </section>
         <div class="header-slider to-right">
-          <article class="slider-item">
-            <div class="item-image to-left"><img src="img/ps4-uncharted4-slider.png" width="360" height="248" alt="PS4 Uncharted 4 Edition"></div>
-            <div class="to-right">
-              <section class="item-description">
-                <h1>Игровая консоль PlayStation 4&nbsp;Uncharted&nbsp;4 Edition (CUH-1208B)</h1>
-                <p>Купите комплект PS4 &laquo;Uncharted&nbsp;4: Путь вора&raquo; ограниченной серии и&nbsp;получите новейшее приключение Натана Дрейка и&nbsp;яркую серо-голубую систему PS4&nbsp;с 1&nbsp;Тб встроенной памяти. На&nbsp;консоли изображен Натан Дрейк, а&nbsp;беспроводной контроллер DUALSHOCK 4&nbsp;исполнен в&nbsp;той&nbsp;же цветовой гамме.</p>
-              </section>
-              <a href="#" class="btn">Купить</a>
-            </div>
-          </article>
+            <article class="slider-item clearfix">
+              <div class="item-image to-left"><img src="img/ps4-uncharted4-slider.png" width="360" height="248" alt="PS4 Uncharted 4 Edition"></div>
+              <div class="to-right">
+                <section class="item-description">
+                  <h1>Sony PS4 Uncharted&nbsp;4 Edition</h1>
+                  <p>Купите комплект PS4 &laquo;Uncharted&nbsp;4: Путь вора&raquo; ограниченной серии и&nbsp;получите новейшее приключение Натана Дрейка и&nbsp;яркую серо-голубую систему PS4&nbsp;с 1&nbsp;Тб встроенной памяти.</p>
+                </section>
+                <a href="#" class="btn">Купить</a>
+              </div>
+            </article>
         </div>
       </div>
     </div>
