Завершен блок фидбэка

--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
       <img src="img/blizzard-logo.png" alt="Blizzard">
     </aside>
     <aside class="feed">
+      <div class="feed-header"><i class="fa fa-instagram" aria-hidden="true"></i>
+Instagram feed: <span>#playstore</span></div>
       <div class="feed-img"><img src="img/photo-1.jpg" alt="PS4 Black" title="PS4 Black"></div>
       <div class="feed-img"><img src="img/photo-2.jpg" alt="PS4 Camera" title="PS4 Camera"></div>
       <div class="feed-img"><img src="img/photo-3.jpg" alt="PS4 Full Set" title="PS4 Full Set"></div>
