Колонки футера будут на флоатах

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ Instagram feed: <span>#playstore</span></div>
     </div>
     <div class="footer-middle">
       <div class="container">
-        <section class="footer-columns">
+        <section class="footer-column">
           <h2>Category</h2>
           <ul>
             <li><a href="#">Home</a></li>
@@ -207,7 +207,7 @@ Instagram feed: <span>#playstore</span></div>
             <li><a href="#">contact</a></li>
           </ul>
         </section>
-        <section class="footer-columns">
+        <section class="footer-column">
           <h2>Our Account</h2>
           <ul>
             <li><a href="#">Your Account</a></li>
@@ -219,7 +219,7 @@ Instagram feed: <span>#playstore</span></div>
             <li><a href="#">Search Terms</a></li>
           </ul>
         </section>
-        <section class="footer-columns">
+        <section class="footer-column">
           <h2>Our Support</h2>
           <ul>
             <li><a href="#">Site Map</a></li>
@@ -231,7 +231,7 @@ Instagram feed: <span>#playstore</span></div>
             <li><a href="#">Addresses</a></li>
           </ul>
         </section>
-        <section class="footer-columns">
+        <section class="footer-column">
           <h2>Newsletter</h2>
           <p>Join thousands of&nbsp;other people subscribe to&nbsp;our news</p>
           <form action="">
@@ -247,7 +247,7 @@ Instagram feed: <span>#playstore</span></div>
             <img src="img/visa.jpg" width="36" height="22" alt="visa">
           </div>
         </section>
-        <section class="footer-columns">
+        <section class="footer-column">
           <h2>About Us</h2>
           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
           <span>Phone:</span>
