--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@ Instagram feed: <span>#playstore</span></div>
       </div>
     </div>
     <div class="footer-middle">
-      <div class="container">
-        <section class="footer-column">
+      <div class="container clearfix">
+        <section class="footer-column footer-menu">
           <h2>Category</h2>
-          <ul>
+          <ul class="menu-column">
             <li><a href="#">Home</a></li>
             <li><a href="#">about us</a></li>
             <li><a href="#">eshop</a></li>
@@ -207,9 +207,9 @@ Instagram feed: <span>#playstore</span></div>
             <li><a href="#">contact</a></li>
           </ul>
         </section>
-        <section class="footer-column">
+        <section class="footer-column footer-menu">
           <h2>Our Account</h2>
-          <ul>
+          <ul class="menu-column">
             <li><a href="#">Your Account</a></li>
             <li><a href="#">Personal information</a></li>
             <li><a href="#">Addresses</a></li>
@@ -219,9 +219,9 @@ Instagram feed: <span>#playstore</span></div>
             <li><a href="#">Search Terms</a></li>
           </ul>
         </section>
-        <section class="footer-column">
+        <section class="footer-column footer-menu">
           <h2>Our Support</h2>
-          <ul>
+          <ul class="menu-column">
             <li><a href="#">Site Map</a></li>
             <li><a href="#">Search Terms</a></li>
             <li><a href="#">Advanced Search</a></li>
@@ -231,11 +231,11 @@ Instagram feed: <span>#playstore</span></div>
             <li><a href="#">Addresses</a></li>
           </ul>
         </section>
-        <section class="footer-column">
+        <section class="footer-column column-subscribe">
           <h2>Newsletter</h2>
           <p>Join thousands of&nbsp;other people subscribe to&nbsp;our news</p>
           <form action="">
-            <input type="email">
+            <input type="email" placeholder="Введите email">
             <button type="submit">Submit</button>
           </form>
           <div class="pay-services">
@@ -247,19 +247,21 @@ Instagram feed: <span>#playstore</span></div>
             <img src="img/visa.jpg" width="36" height="22" alt="visa">
           </div>
         </section>
-        <section class="footer-column">
+        <section class="footer-column column-about-us">
           <h2>About Us</h2>
           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-          <span>Phone:</span>
-          <span>1-999-342-9876</span>
-          <span>e-mail:</span>
-          <span>info@surfhouse.com</span>
+          <div class="about-us-contact"><span>Phone:</span>
+          <span>1-999-342-9876</span></div>
+          <div class="about-us-contact"><span>e-mail:</span>
+          <span class="contact-emai">info@surfhouse.com</span></div>
         </section>
       </div>
     </div>
     <div class="footer-bottom">
       <div class="container">
-        <div class="footer-copyright to-left">&copy; 2016 PlayStore. Все права защищены</div>
+        <div class="footer-copyright to-left">
+          &copy; 2016 <span class="copyright-title">PlayStore</span>. Все права защищены
+        </div>
         <div class="footer-social to-right"></div>
       </div>
     </div>
