Подправил ошибку в названии класса

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
           <div class="about-us-contact"><span>Phone:</span>
           <span>1-999-342-9876</span></div>
           <div class="about-us-contact"><span>e-mail:</span>
-          <span class="contact-emai">info@surfhouse.com</span></div>
+          <span class="contact-email">info@surfhouse.com</span></div>
         </section>
       </div>
     </div>
